Thu Sep  7 18:44:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added debug information to DB database reading code.

	* Fix a type in matcher.  (om_weight -> om_docid)

Thu Sep 07 17:44:24 BST 2000 Olly Betts

	* net/socketcommon.cc: Improved a couple of exception messages.

Thu Sep 07 16:15:17 BST 2000 Olly Betts

	* Fixed a problem with distributing NEAR and PHRASE.

Thu Sep  7 13:45:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
	* Change om_tostring(double) so that it doesn't pad with spaces,
	  fixing all the network stuff.  (Whoops)
 
Thu Sep  7 11:50:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various other fixes needed to compile with --disable-pthread-support

Thu Sep  7 11:03:32 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix to make omdebug.cc compile when --disable-pthread-support
	  is specified to configure.

Thu Sep  7 01:40:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added extra debugging to matcher to help track down reported
	  bug.

	* Changed value of C in bm25weight to 0 to see if this helps Webtop
	  performance in pathological cases.

	* Fixed threadtest.cc so that it runs again.

Wed Sep  6 17:44:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* <param> added to the test.dtd
	
	* mt_vector added as a message type separate from mt_record
	
Wed Sep 06 17:37:50 BST 2000 Olly Betts

	* Tom Mortimer gets a well deserved mention in the AUTHORS list for
	  bug reporting.

Wed Sep 06 16:32:01 BST 2000 Olly Betts

	* website now uses viewcvs - another TODO bites the dust.

Wed Sep  6 15:43:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Outputs other than "out" can be used for the output of the whole
	  network.

	* Added <param> tags to pass configuration info to nodes from the
	  XML description.  OmIndexerNode::get_config_string() actually
	  implemented, plus OmIndexerNode constructor now takes an
	  OmSettings.
	